typo in filepath

--- a/S1_ice_water_classification/sentinel_search.ipynb
+++ b/S1_ice_water_classification/sentinel_search.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "3be7a9f4-246c-4308-94cf-9d314b188757",
    "metadata": {},
    "outputs": [],
@@ -121,15 +121,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "9338397b-7c04-4064-bc7a-96b1bc33d1ed",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found 2 S1 scenes with overlapping S2 imagery.\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/home/jovyan/public-notebooks/S1_ice_water_classification/rois/Barents_Sea.geojson'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 22\u001b[0m\n\u001b[1;32m     15\u001b[0m endtime \u001b[38;5;241m=\u001b[39m parse(endtime, settings\u001b[38;5;241m=\u001b[39m{\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDATE_ORDER\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mYMD\u001b[39m\u001b[38;5;124m\"\u001b[39m})\n\u001b[1;32m     17\u001b[0m \u001b[38;5;66;03m# -------------------------------------------------------------------------------------------------------------------\u001b[39;00m\n\u001b[1;32m     18\u001b[0m \u001b[38;5;66;03m# PERFORM SEARCH\u001b[39;00m\n\u001b[1;32m     19\u001b[0m \n\u001b[1;32m     20\u001b[0m \u001b[38;5;66;03m# query for S1 products that match our search criteria\u001b[39;00m\n\u001b[1;32m     21\u001b[0m s1_products \u001b[38;5;241m=\u001b[39m api\u001b[38;5;241m.\u001b[39mquery(\n\u001b[0;32m---> 22\u001b[0m                 geojson_to_wkt(\u001b[43mread_geojson\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpolygon_path\u001b[49m\u001b[43m)\u001b[49m),\n\u001b[1;32m     23\u001b[0m                 date\u001b[38;5;241m=\u001b[39m(starttime, endtime),\n\u001b[1;32m     24\u001b[0m                 platformname\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSentinel-1\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     25\u001b[0m                 producttype\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGRD\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     26\u001b[0m                 area_relation\u001b[38;5;241m=\u001b[39ms1_area_relation,\n\u001b[1;32m     27\u001b[0m                 )\n",
+      "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/sentinelsat/sentinel.py:1119\u001b[0m, in \u001b[0;36mread_geojson\u001b[0;34m(geojson_file)\u001b[0m\n\u001b[1;32m   1117\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mread_geojson\u001b[39m(geojson_file):\n\u001b[1;32m   1118\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Read a GeoJSON file into a GeoJSON object.\"\"\"\u001b[39;00m\n\u001b[0;32m-> 1119\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mgeojson_file\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[1;32m   1120\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m geojson\u001b[38;5;241m.\u001b[39mload(f)\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/home/jovyan/public-notebooks/S1_ice_water_classification/rois/Barents_Sea.geojson'"
      ]
     }
    ],
@@ -137,7 +142,7 @@
     "# DEFINE SEARCH PARAMETERS FOR S1\n",
     "\n",
     "# use custom geojson files containing search polygon\n",
-    "area = './rois/Barents_Sea.geojson'\n",
+    "area = './ROIs/Barents_Sea.geojson'\n",
     "polygon_path = Path(area).expanduser().absolute()\n",
     "\n",
     "# set start- and endtime for search\n",
@@ -255,18 +260,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "66ee3a12-52fb-4b08-80bf-b9f227d9d454",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Search results saved to txt files!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# save dictionary results to text files, these text files can then be used to download the S1 and S2 products on e.g. Creodias\n",
     "for key, value in s1_s2_overlap.items(): \n",
