move screenshots to resources directory

--- a/selected_distrubed_lakes_ecosystem_data/selected_distrubed_lakes_ecosystem_data.ipynb
+++ b/selected_distrubed_lakes_ecosystem_data/selected_distrubed_lakes_ecosystem_data.ipynb
@@ -1163,7 +1163,7 @@
    "metadata": {},
    "source": [
     "The shapefiles of the lakes are now visible in the CVL3D as shown below:\n",
-    "![](screenshot_1.PNG)\n"
+    "![](res/screenshot_1.PNG)\n"
    ]
   },
   {
@@ -1296,7 +1296,7 @@
    "metadata": {},
    "source": [
     "The <em>Landcover</em> and available <em>\"Climate Data\"</em> of the lakes are now added in the CVL3D as shown below:\n",
-    "![](screenshot_02.PNG)"
+    "![](res/screenshot_02.PNG)"
    ]
   },
   {
@@ -1306,9 +1306,9 @@
    "source": [
     "- expected output: <em>see screenshots below</em>\n",
     "<br>zoom in to one lake: \n",
-    "![](screenshot_04.PNG)\n",
+    "![](res/screenshot_04.PNG)\n",
     "<br>zoom in to another lake:\n",
-    "![](screenshot_5.PNG)"
+    "![](res/screenshot_5.PNG)"
    ]
   },
   {
@@ -1319,7 +1319,7 @@
     "- important: <br>\n",
     "    - in the <em> \"Background Layer\" </em>section: <em> \"Vector Layer\" </em>needs to be <b>enabled!</b> <em> Screenshot below, otherwise the <b>!whole!</b> data is not visible! </em> <br>\n",
     "    - the image <b>tilt</b> need to be investigated...\n",
-    "![](screenshot_03.PNG)"
+    "![](res/screenshot_03.PNG)"
    ]
   },
   {
