download data bools to True as default

--- a/selected_distrubed_lakes_ecosystem_data/selected_distrubed_lakes_ecosystem_data.ipynb
+++ b/selected_distrubed_lakes_ecosystem_data/selected_distrubed_lakes_ecosystem_data.ipynb
@@ -88,8 +88,8 @@
     }
    ],
    "source": [
-    "download_data = False #insert False or True if you need to download the data\n",
-    "need_to_download_era5 = False # do you want additional era5data? and need to download era5  data? False or True\n",
+    "download_data = True #insert False or True if you need to download the data\n",
+    "need_to_download_era5 = True # do you want additional era5data? and need to download era5  data? False or True\n",
     "\n",
     "buffer_dist = 30 #buffer dist (CVL proposal 30 meter)\n",
     "buffer_dist_era5 = 10000 #define era5 buffer dist around the lake, check era5 data grid to have input data!)\n",
