--- a/netCDF-creator/netCDF_creator.ipynb
+++ b/netCDF-creator/netCDF_creator.ipynb
@@ -27,7 +27,6 @@
     "from netCDF4 import date2num, num2date\n",
     "import time\n",
     "import warnings\n",
-    "import uwibasspp # This is only to be able to import the example dataset\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")"
    ]
@@ -111,7 +110,7 @@
     "file_ext = \".pkl\"\n",
     "\n",
     "# Directory where said file is\n",
-    "directory = \"/home/jovyan/CVL/public-notebooks/netCDF-creator/tmp/\"\n",
+    "directory = \"./tmp/\"\n",
     "\n",
     "with open(directory + dataset_name + file_ext, \"rb\") as inp:\n",
     "    data = pickle.load(inp)"
@@ -153,7 +152,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Date and time of creation: [2023-02-06T11:16:03.074200] User: [Rolf] Notes: [Sawtooth survey. 5 m/s alt 8 m]\n"
+      "Date and time of creation: [2023-02-09T14:25:19.294406] User: [Rolf] Notes: [Sawtooth survey. 5 m/s alt 8 m]\n"
      ]
     }
    ],
@@ -389,31 +388,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running Compliance Checker on the datasets from: ['tmp/2021_04_15_test.nc']\n",
-      "\n",
-      "\n",
-      "--------------------------------------------------------------------------------\n",
-      "                         IOOS Compliance Checker Report                         \n",
-      "                                 Version 5.0.2                                  \n",
-      "                     Report generated 2023-02-06T11:18:54Z                      \n",
-      "                                     cf:1.6                                     \n",
-      "       http://cfconventions.org/cf-conventions/v1.6.0/cf-conventions.html       \n",
-      "--------------------------------------------------------------------------------\n",
-      "                               Corrective Actions                               \n",
-      "2021_04_15_test.nc has 1 potential issue\n",
-      "\n",
-      "\n",
-      "                                    Warnings                                    \n",
-      "--------------------------------------------------------------------------------\n",
-      "§2.3 Naming Conventions\n",
-      "* attribute station_name:_Encoding should begin with a letter and be composed of letters, digits, and underscores\n",
+      "bash: line 1: compliance-checker: command not found\n",
       " \n",
       "<class 'netCDF4._netCDF4.Dataset'>\n",
       "root group (NETCDF4 data model, file format HDF5):\n",
@@ -432,7 +414,7 @@
       "    geospatial_lon_max: 15.518507399999999\n",
       "    time_coverage_start: 2021-04-15T09:49:14.631005\n",
       "    time_coverage_end: 2021-04-15T09:52:06.869512\n",
-      "    history: Date and time of creation: [2023-02-06T11:16:03.074200] User: [Rolf] Notes: [Sawtooth survey. 5 m/s alt 8 m]\n",
+      "    history: Date and time of creation: [2023-02-09T14:25:19.294406] User: [Rolf] Notes: [Sawtooth survey. 5 m/s alt 8 m]\n",
       "    source: UWB radar\n",
       "    creator_type: Person\n",
       "    creator_institution: NORCE\n",
@@ -711,9 +693,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python (rolf)",
    "language": "python",
-   "name": "python3"
+   "name": "rolf"
   },
   "language_info": {
    "codemirror_mode": {
