remove test data from repo and add programmatic download

--- a/netCDF-creator/netCDF_creator.ipynb
+++ b/netCDF-creator/netCDF_creator.ipynb
@@ -27,6 +27,8 @@
     "from netCDF4 import date2num, num2date\n",
     "import time\n",
     "import warnings\n",
+    "import os\n",
+    "import requests\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")"
    ]
@@ -92,6 +94,27 @@
     "This notebook is based around Python Classes and Objects.\n",
     "In this example, the processed data is stored as a .pkl file, but it can be of any format as long as it is correctly assigned in the \"Write data to variables\" cell.\n",
     "In test dataset can (in addition to the repo) be found at https://doi.org/10.5281/zenodo.7609866"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Download test dataset from Zenodo if not already present"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if not os.path.exists('tmp'):\n",
+    "    os.makedirs('tmp')\n",
+    "if not os.path.exists(os.path.join('tmp','2021_04_15_test.pkl')):\n",
+    "    file_url = 'https://zenodo.org/record/7609866/files/2021_04_15_test.pkl'\n",
+    "    r = requests.get(file_url, allow_redirects=True)\n",
+    "    open('tmp/2021_04_15_test.pkl', 'wb').write(r.content)"
    ]
   },
   {
