use compliance checker inline instead of bash command

--- a/netCDF-creator/netCDF_creator.ipynb
+++ b/netCDF-creator/netCDF_creator.ipynb
@@ -114,26 +114,14 @@
     "if not os.path.exists(os.path.join('tmp','2021_04_15_test.pkl')):\n",
     "    file_url = 'https://zenodo.org/record/7609866/files/2021_04_15_test.pkl'\n",
     "    r = requests.get(file_url, allow_redirects=True)\n",
-    "    open('tmp/2021_04_15_test.pkl', 'wb').write(r.content)"
+    "    open(os.path.join('tmp','2021_04_15_test.pkl'), 'wb').write(r.content)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'uwibasspp'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [6], line 14\u001b[0m\n\u001b[1;32m     11\u001b[0m directory \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m./tmp/\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(directory \u001b[38;5;241m+\u001b[39m dataset_name \u001b[38;5;241m+\u001b[39m file_ext, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m inp:\n\u001b[0;32m---> 14\u001b[0m     data \u001b[38;5;241m=\u001b[39m \u001b[43mpickle\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43minp\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'uwibasspp'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# # Define class for dataset import. This is specific to the example dataset\n",
     "# class rdr:\n",
@@ -161,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,14 +168,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Date and time of creation: [2023-02-09T14:25:19.294406] User: [Rolf] Notes: [Sawtooth survey. 5 m/s alt 8 m]\n"
+      "Date and time of creation: [2023-02-10T22:51:54.499016] User: [Rolf] Notes: [Sawtooth survey. 5 m/s alt 8 m]\n"
      ]
     }
    ],
@@ -290,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +411,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import netCDF4\n",
+    "import matplotlib.pyplot as plt\n",
+    "from compliance_checker.runner import ComplianceChecker, CheckSuite"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "--------------------------------------------------------------------------------\n",
+      "                         IOOS Compliance Checker Report                         \n",
+      "                                 Version 5.0.2                                  \n",
+      "                     Report generated 2023-02-10T22:57:52Z                      \n",
+      "                                     cf:1.8                                     \n",
+      "http://cfconventions.org/Data/cf-conventions/cf-conventions-1.8/cf-conventions.html\n",
+      "--------------------------------------------------------------------------------\n",
+      "                               Corrective Actions                               \n",
+      "2021_04_15_test.nc has 2 potential issues\n",
+      "\n",
+      "\n",
+      "                                    Warnings                                    \n",
+      "--------------------------------------------------------------------------------\n",
+      "§2.3 Naming Conventions\n",
+      "* attribute station_name:_Encoding should begin with a letter and be composed of letters, digits, and underscores\n",
+      "\n",
+      "§2.6 Attributes\n",
+      "* §2.6.1 Conventions global attribute does not contain \"CF-1.8\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check CF compliance. The library seems to have issues locating the checkers.. Probably a simple fix to get this working. For now we need to do a call in the terminal\n",
+    "check_suite = CheckSuite()\n",
+    "check_suite.load_all_available_checkers()\n",
+    "# print(check_suite.checkers)\n",
+    "# Run cf checks\n",
+    "path = directory + output_name + \".nc\"\n",
+    "checker_names = ['cf']\n",
+    "verbose = 0\n",
+    "criteria = 'normal'\n",
+    "output_filename = directory  + 'report.json'\n",
+    "output_format = 'json'\n",
+    "return_value, errors = ComplianceChecker.run_checker(path,checker_names,verbose,criteria)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +502,7 @@
       "    geospatial_lon_max: 15.518507399999999\n",
       "    time_coverage_start: 2021-04-15T09:49:14.631005\n",
       "    time_coverage_end: 2021-04-15T09:52:06.869512\n",
-      "    history: Date and time of creation: [2023-02-09T14:25:19.294406] User: [Rolf] Notes: [Sawtooth survey. 5 m/s alt 8 m]\n",
+      "    history: Date and time of creation: [2023-02-10T22:51:54.499016] User: [Rolf] Notes: [Sawtooth survey. 5 m/s alt 8 m]\n",
       "    source: UWB radar\n",
       "    creator_type: Person\n",
       "    creator_institution: NORCE\n",
