fix file handle not closing

--- a/netCDF-creator/netCDF_creator.ipynb
+++ b/netCDF-creator/netCDF_creator.ipynb
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,12 +114,13 @@
     "if not os.path.exists(os.path.join('tmp','2021_04_15_test.pkl')):\n",
     "    file_url = 'https://zenodo.org/record/7609866/files/2021_04_15_test.pkl'\n",
     "    r = requests.get(file_url, allow_redirects=True)\n",
-    "    open(os.path.join('tmp','2021_04_15_test.pkl'), 'wb').write(r.content)"
+    "    with open(os.path.join('tmp','2021_04_15_test.pkl'), 'wb') as f:\n",
+    "        f.write(r.content)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,14 +169,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Date and time of creation: [2023-02-10T22:51:54.499016] User: [Rolf] Notes: [Sawtooth survey. 5 m/s alt 8 m]\n"
+      "Date and time of creation: [2023-02-10T22:59:39.310881] User: [Rolf] Notes: [Sawtooth survey. 5 m/s alt 8 m]\n"
      ]
     }
    ],
@@ -278,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,15 +422,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Check CF compliance"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +442,7 @@
       "--------------------------------------------------------------------------------\n",
       "                         IOOS Compliance Checker Report                         \n",
       "                                 Version 5.0.2                                  \n",
-      "                     Report generated 2023-02-10T22:57:52Z                      \n",
+      "                     Report generated 2023-02-10T22:59:40Z                      \n",
       "                                     cf:1.8                                     \n",
       "http://cfconventions.org/Data/cf-conventions/cf-conventions-1.8/cf-conventions.html\n",
       "--------------------------------------------------------------------------------\n",
@@ -476,14 +477,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "bash: line 1: compliance-checker: command not found\n",
       " \n",
       "<class 'netCDF4._netCDF4.Dataset'>\n",
       "root group (NETCDF4 data model, file format HDF5):\n",
@@ -502,7 +502,7 @@
       "    geospatial_lon_max: 15.518507399999999\n",
       "    time_coverage_start: 2021-04-15T09:49:14.631005\n",
       "    time_coverage_end: 2021-04-15T09:52:06.869512\n",
-      "    history: Date and time of creation: [2023-02-10T22:51:54.499016] User: [Rolf] Notes: [Sawtooth survey. 5 m/s alt 8 m]\n",
+      "    history: Date and time of creation: [2023-02-10T22:59:39.310881] User: [Rolf] Notes: [Sawtooth survey. 5 m/s alt 8 m]\n",
       "    source: UWB radar\n",
       "    creator_type: Person\n",
       "    creator_institution: NORCE\n",
@@ -590,32 +590,6 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "# from numpy import float16, float32, float64\n",
-    "import netCDF4\n",
-    "import matplotlib.pyplot as plt\n",
-    "from compliance_checker.runner import ComplianceChecker, CheckSuite\n",
-    "\n",
-    "\n",
-    "# Check CF compliance. The library seems to have issues locating the checkers.. Probably a simple fix to get this working. For now we need to do a call in the terminal\n",
-    "# check_suite = CheckSuite()\n",
-    "# check_suite.load_all_available_checkers()\n",
-    "# print(check_suite.checkers)\n",
-    "# # Run cf checks\n",
-    "# path = directory + output_name + \".nc\"\n",
-    "# checker_names = ['cf']\n",
-    "# verbose = 0\n",
-    "# criteria = 'normal'\n",
-    "# output_filename = directory  + 'report.json'\n",
-    "# output_format = 'json'\n",
-    "# return_value, errors = ComplianceChecker.run_checker(path,checker_names,verbose,criteria)\n",
-    "\n",
-    "# Terminal call placeholder\n",
-    "!bash -c \"compliance-checker --test=cf:1.6 tmp/2021_04_15_test.nc\"\n",
-    "\n",
-    "\n",
-    "\n",
     "# Load the test file\n",
     "# f = netCDF4.Dataset('tmp/test.nc', 'r')\n",
     "# Or the file from the directory\n",
@@ -734,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -756,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
