--- a/polona_itkin_als-3dviz/transect_visualization.ipynb
+++ b/polona_itkin_als-3dviz/transect_visualization.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 1,
    "id": "38f32934",
    "metadata": {},
    "outputs": [],
@@ -50,10 +50,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 2,
    "id": "ab789b68",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pyproj in /opt/conda/lib/python3.10/site-packages (3.4.1)\n",
+      "Requirement already satisfied: certifi in /opt/conda/lib/python3.10/site-packages (from pyproj) (2022.9.24)\n"
+     ]
+    }
+   ],
    "source": [
     "!pip3 install git+https://github.com/CryosphereVirtualLab/cvl-3d-viz#egg=cvl-3d-viz > /dev/null 2>&1\n",
     "!pip3 install pillow > /dev/null \n",
@@ -72,17 +81,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 417,
+   "execution_count": 3,
    "id": "cfab4c6d",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cloning into '/home/jovyan/cvl-3d-viz'...\n",
+      "remote: Enumerating objects: 76, done.\u001b[K\n",
+      "remote: Counting objects: 100% (76/76), done.\u001b[K\n",
+      "remote: Compressing objects: 100% (47/47), done.\u001b[K\n",
+      "remote: Total 76 (delta 28), reused 67 (delta 22), pack-reused 0\u001b[K\n",
+      "Receiving objects: 100% (76/76), 836.99 KiB | 8.21 MiB/s, done.\n",
+      "Resolving deltas: 100% (28/28), done.\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "<Popen: returncode: None args: 'cd ~/cvl-3d-viz && nohup python3 cvl/server....>"
       ]
      },
-     "execution_count": 417,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +449,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "85307ff8",
    "metadata": {},
@@ -461,9 +482,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python (polona)",
    "language": "python",
-   "name": "python3"
+   "name": "polona"
   },
   "language_info": {
    "codemirror_mode": {
@@ -475,7 +496,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
