remove pip installs and add cvl to sys.path

--- a/polona_itkin_als-3dviz/transect_visualization.ipynb
+++ b/polona_itkin_als-3dviz/transect_visualization.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "38f32934",
    "metadata": {},
    "outputs": [],
@@ -50,24 +50,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "ab789b68",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pyproj in /opt/conda/lib/python3.10/site-packages (3.4.1)\n",
-      "Requirement already satisfied: certifi in /opt/conda/lib/python3.10/site-packages (from pyproj) (2022.9.24)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip3 install git+https://github.com/CryosphereVirtualLab/cvl-3d-viz#egg=cvl-3d-viz > /dev/null 2>&1\n",
-    "!pip3 install pillow > /dev/null \n",
-    "!pip install pyresample > /dev/null 2>&1\n",
-    "!pip install pyproj"
+    "#!pip3 install git+https://github.com/CryosphereVirtualLab/cvl-3d-viz#egg=cvl-3d-viz > /dev/null 2>&1\n",
+    "#!pip3 install pillow > /dev/null \n",
+    "#!pip install pyresample > /dev/null 2>&1\n",
+    "!#pip install pyproj"
    ]
   },
   {
@@ -81,50 +72,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "cfab4c6d",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cloning into '/home/jovyan/cvl-3d-viz'...\n",
-      "remote: Enumerating objects: 76, done.\u001b[K\n",
-      "remote: Counting objects: 100% (76/76), done.\u001b[K\n",
-      "remote: Compressing objects: 100% (47/47), done.\u001b[K\n",
-      "remote: Total 76 (delta 28), reused 67 (delta 22), pack-reused 0\u001b[K\n",
-      "Receiving objects: 100% (76/76), 836.99 KiB | 8.21 MiB/s, done.\n",
-      "Resolving deltas: 100% (28/28), done.\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "<Popen: returncode: None args: 'cd ~/cvl-3d-viz && nohup python3 cvl/server....>"
+       "<Popen: returncode: None args: 'cd ./cvl-3d-viz && nohup python3 cvl/server....>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Obtain 3d viz server code\n",
-    "!if [ ! -d ~/cvl-3d-viz ]; then git clone https://github.com/CryosphereVirtualLab/cvl-3d-viz.git ~/cvl-3d-viz ; fi\n",
-    "# import os\n",
-    "import subprocess\n",
-    "subprocess.Popen(\"cd ~/cvl-3d-viz && nohup python3 cvl/server.py > /dev/null 2>&1 &\", shell=True)"
+    "!if [ ! -d ./cvl-3d-viz ]; then git clone https://github.com/CryosphereVirtualLab/cvl-3d-viz.git ./cvl-3d-viz ; fi\n",
+    "\n",
+    "# add cvl to path\n",
+    "import os\n",
+    "import sys\n",
+    "sys.path.append(os.path.join(os.path.abspath(os.path.curdir),\"cvl-3d-viz\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 430,
+   "execution_count": 4,
+   "id": "6b55eabd-2e52-4795-97f2-b48c3a05ffaa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Popen: returncode: None args: 'cd ./cvl-3d-viz && nohup python3 cvl/server....>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import subprocess\n",
+    "subprocess.Popen(\"cd ./cvl-3d-viz && nohup python3 cvl/server.py > /dev/null 2>&1 &\", shell=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ef4d1b29-7704-45d1-ae6e-b40562a72831",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cvl.viz import viz, VBO, Raster"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "e76fb93f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cvl.viz import viz, VBO, Raster\n",
+    "from cvl.viz import VBO, Raster\n",
     "visualizer = viz()\n",
     "# visualizer.look_at([70, 70, 5000], [1, 69.673, 0], 100)"
    ]
