update download procedure documentation

--- a/polona_itkin_als-3dviz/transect_visualization.ipynb
+++ b/polona_itkin_als-3dviz/transect_visualization.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "38f32934",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "ab789b68",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
     "#!pip3 install git+https://github.com/CryosphereVirtualLab/cvl-3d-viz#egg=cvl-3d-viz > /dev/null 2>&1\n",
     "#!pip3 install pillow > /dev/null \n",
     "#!pip install pyresample > /dev/null 2>&1\n",
-    "!#pip install pyproj"
+    "#!pip install pyproj"
    ]
   },
   {
@@ -72,21 +72,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "cfab4c6d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Popen: returncode: None args: 'cd ./cvl-3d-viz && nohup python3 cvl/server....>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Obtain 3d viz server code\n",
     "!if [ ! -d ./cvl-3d-viz ]; then git clone https://github.com/CryosphereVirtualLab/cvl-3d-viz.git ./cvl-3d-viz ; fi\n",
@@ -150,16 +139,16 @@
     "\n",
     "Data series come in tabular format and represent geographical coordinates and height. Data are hosted at Zenodo and need to be cached locally before executing the rest of the playbook. Additionally Sentinel-1 scenes are used as a background and those are added\n",
     "\n",
-    "We will pull the data zip file using requests library and unpack it locally for further use."
+    "We will pull the data zip file using requests library and unpack it locally for further use.\n",
+    "\n",
+    "___NOTE__: Make sure the following is a code cell when running playbook. By default it is set to raw nbconvert format, so execution of the cell is skipped._"
    ]
   },
   {
    "cell_type": "raw",
-   "id": "cf768826",
+   "id": "dccb5cef-9982-4500-999a-c7c8424034c5",
    "metadata": {},
    "source": [
-    "# Make sure it is a code cell when running playbook. By default it is set to raw nbconvert format, so execution of the cell is skipped.\n",
-    "\n",
     "import zipfile, io, requests, sys\n",
     "file_name = \"output.zip\"\n",
     "\n",
@@ -193,8 +182,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f76a71d4-2e98-4e6d-abdf-0ed953af0bbe",
+   "metadata": {},
+   "source": [
+    "___NOTE__: Make sure the following is a code cell when running playbook. By default it is set to raw nbconvert format, so execution of the cell is skipped._"
+   ]
+  },
+  {
    "cell_type": "raw",
-   "id": "4602f736",
+   "id": "29fc5493-01a2-446b-9ed8-5a9a7ac685ad",
    "metadata": {},
    "source": [
     "z = zipfile.ZipFile(file_name)\n",
@@ -214,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 9,
    "id": "39b59282",
    "metadata": {},
    "outputs": [],
@@ -226,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "dd484fba",
    "metadata": {
     "scrolled": true
