update png file paths

--- a/polona_itkin_als-3dviz/transect_visualization.ipynb
+++ b/polona_itkin_als-3dviz/transect_visualization.ipynb
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "39b59282",
    "metadata": {},
    "outputs": [],
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "dd484fba",
    "metadata": {
     "scrolled": true
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 472,
+   "execution_count": 13,
    "id": "6adb946d",
    "metadata": {},
    "outputs": [],
@@ -272,10 +272,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 473,
+   "execution_count": 14,
    "id": "d7156665",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread Thread-5 (process_thread):\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/conda/envs/polona/lib/python3.10/threading.py\", line 1016, in _bootstrap_inner\n",
+      "ERROR 1: PROJ: proj_create_from_database: Open of /opt/conda/envs/polona/share/proj failed\n",
+      "ERROR 1: PROJ: proj_create_from_database: Open of /opt/conda/envs/polona/share/proj failed\n",
+      "ERROR 1: PROJ: proj_create: unrecognized format / unknown name\n",
+      "ERROR 1: PROJ: proj_create: unrecognized format / unknown name\n",
+      "    self.run()\n",
+      "  File \"/opt/conda/envs/polona/lib/python3.10/threading.py\", line 953, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/home/jovyan/help/polona/public-notebooks/polona_itkin_als-3dviz/cvl-3d-viz/cvl/viz.py\", line 271, in process_thread\n",
+      "    method(item[\"key\"], item[\"metadata\"], item[\"object\"])\n",
+      "  File \"/home/jovyan/help/polona/public-notebooks/polona_itkin_als-3dviz/cvl-3d-viz/cvl/viz.py\", line 361, in _publish_vbo\n",
+      "    vbo.prepare()\n",
+      "  File \"/home/jovyan/help/polona/public-notebooks/polona_itkin_als-3dviz/cvl-3d-viz/cvl/viz.py\", line 175, in prepare\n",
+      "    self.processed_buffers[self.VERTEX] = reproject(self.source_buffers[self.VERTEX], self.projection)\n",
+      "  File \"/home/jovyan/help/polona/public-notebooks/polona_itkin_als-3dviz/cvl-3d-viz/cvl/viz.py\", line 37, in reproject\n",
+      "    transformed = xform.TransformPoints(buffer)\n",
+      "  File \"/opt/conda/envs/polona/lib/python3.10/site-packages/osgeo/osr.py\", line 946, in TransformPoints\n",
+      "    return _osr.CoordinateTransformation_TransformPoints(self, *args)\n",
+      "TypeError: in method 'CoordinateTransformation_TransformPoints', argument 1 of type 'OSRCoordinateTransformationShadow *'\n"
+     ]
+    }
+   ],
    "source": [
     "# Display transect measurements\n",
     "\n",
@@ -299,7 +327,7 @@
     "\n",
     "Picture below illustrates the results of plotting the transect points data. Points have 3 dimensions and when zooming in a difference in height is noticeable.\n",
     "\n",
-    "![title](./screenshot.png)"
+    "![title](./res/screenshot.png)"
    ]
   },
   {
@@ -416,7 +444,7 @@
     "from PIL import Image\n",
     "# Normalize and scale to 255 before saving\n",
     "im = Image.fromarray(np.uint8((res-res.min())/(res.max()-res.min())*255))\n",
-    "im.save(\"out.png\")"
+    "im.save(\"res/out.png\")"
    ]
   },
   {
@@ -441,7 +469,7 @@
     "points[3] = [area_def.projection_x_coords[-1], area_def.projection_y_coords[-1]]\n",
     "\n",
     "# Load raster data\n",
-    "with open(\"out.png\", \"rb\") as fd:\n",
+    "with open(\"res/out.png\", \"rb\") as fd:\n",
     "    texture = fd.read()\n",
     "\n",
     "raster = Raster(points, [2,2], 32633, image_data=texture)\n",
@@ -462,7 +490,7 @@
    "id": "85307ff8",
    "metadata": {},
    "source": [
-    "![s1-transect.png](s1-transect.png)"
+    "![s1-transect.png](res/s1-transect.png)"
    ]
   },
   {
